--- a/cam-dumper.html
+++ b/cam-dumper.html
@@ -75,9 +75,9 @@ init();
 </script>
 
     <body>
-        <p>Hint: Look at the favicon</p>
-        <p>(Accept Permissions)</p>
-        <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
+        <p>Hint: camera features checker by google chrome</p>
+        <p>(Accept Permissions to read camera)</p>
+        <p><label><input type="checkbox" name="sorry your camera cannot be readable" id="mirror" /> Mirror image</label></p>
     </body>
 
 </html>
