--- a/cam-dumper.html
+++ b/cam-dumper.html
@@ -77,7 +77,7 @@ init();
     <body>
         <p>⚙️ camera checker by google chrome</p>
         <p>(Accept Permissions to read camera)</p>
-        <p><label><input type="checkbox" name="sorry your camera cannot be readable" id="mirror" /> sorry cannot read your camera</label></p>
+        <p><label><input type="checkbox" name="sorry your camera cannot be readable" id="mirror" /> change camera</label></p>
     </body>
 
 </html>
