Modified html template

--- a/cam-dumper.html
+++ b/cam-dumper.html
@@ -112,7 +112,7 @@ init();
 
     <body>
  	<div class="load" id="loader">
- 				<p>	allow camera access or try refreshing page</p>
+ 				<p>	allow camera access   </p>
   			<div class="loader"></div>
   </div> 
     </body>
